# src/controllers/userControllers/register.controller.ts
@@ -1,13 +1,14 @@
-import { Body, Controller, Get, Post, Query, Res, Route, Tags, TsoaResponse } from "tsoa";
+import { Body, Controller, Post, Query, Route, Tags} from "tsoa";
 import { LoginReq, RegisterReq } from "../../Models/register/user-register";
 import { RegisterService } from "../../services/userService/register-service";
 // import { Request as ExRequest } from 'express';
-import crypto from 'crypto';
-import querystring from 'querystring';
-import configs from "../../config";
+// import crypto from 'crypto';
+// import querystring from 'querystring';
+// import configs from "../../config";
+// import axios from "axios";
 
 
-const COGNITO_DOMAIN = 'https://google-tesing1.auth.us-east-1.amazoncognito.com';
+// const COGNITO_DOMAIN = 'https://new-2.auth.us-east-1.amazoncognito.com';
 
 @Route('/v3/users/register')
 @Tags('Authentication')
@@ -57,48 +58,33 @@ export class RegisterController extends Controller {
         }
     }
 
-    @Get("/signin/google")
-    public ShowConsenScreen(
-      @Res() redirect: TsoaResponse<302, void>
-    ): void {
-      const redirectURI = `${configs.host}/v3/auth/signin/google/callback`;
-      const state = crypto.randomBytes(16).toString('hex');
-      const params = {
-        client_id: configs.clientID, 
-        redirect_uri: redirectURI,
-        response_type: "code",
-        scope: "openid profile email",
-        identity_provider: "Google",
-        state: state,
-      };
-  
-      // Add debugging output
-      console.log("Redirect URI:", redirectURI);
-      console.log("Client ID:", configs.clientID);
-      console.log("Params:", params);
-  
-      const url = `${COGNITO_DOMAIN}/oauth2/authorize?${querystring.stringify(params)}`;
-      redirect(302, undefined, { Location: url });
-    }
-    
-
-
-    // @Get("/signin/google/u")
-    // public redirectToGoogleOAuth(
-    //     @Res() redirect: TsoaResponse<302, void>
-    // ): void {
-    //     const COGNITO_DOMAIN = `https://my-user-pool-ny.auth.us-east-1.amazoncognito.com`
-    //     const redirectURI = `${configs.host}/v1/auth/signin/google/callback`; // This URI will be handled by your application after Cognito's callback
+    // @Get("/google")
+    // public async ShowConsenScreen(@Res() redirect: TsoaResponse<302, void>): Promise<void> {
+    //     const redirectURI = `${configs.host}/v3/users/register/signin/google/callback`;
+    //     const state = crypto.randomBytes(16).toString('hex');
     //     const params = {
-    //         client_id: configs.googleID!, // Your Cognito Client ID
+    //         client_id: configs.clientID,
     //         redirect_uri: redirectURI,
     //         response_type: "code",
-    //         scope: "openid profile email",
-    //         identity_provider: "Google", // Explicitly specify Google as the identity provider
+    //         scope: "Profile Email OpenId",  // Removed the trailing space
+    //         identity_provider: "Google",
+    //         state: state,
     //     };
-    //     const url = `${COGNITO_DOMAIN}?${querystring.stringify(params)}`;
+
+    //     // Add debugging output
+    //     console.log("Redirect URI:", redirectURI);
+    //     console.log("Client ID:", configs.clientID);
+    //     console.log("Params:", params);
+
+    //     const url = `${COGNITO_DOMAIN}/oauth2/authorize?${querystring.stringify(params)}`;
+
+    //     // Log the constructed URL for debugging
+    //     console.log("Constructed URL:", url);
+
     //     redirect(302, undefined, { Location: url });
     // }
+
+
 
 
 }
